OSP-Core: Applies Fix to /etc/default/celery which sets Pool Type to gevent
OSP-Core: Added Catch for Invalid Forwarded IP Address for Guests which may cause the DB to get stuck
OSP-Core: Cleans up browser console error for when user is not logged in and uploads
OSP-Core: Fixes Channel Chat when Channel Chat is Disabled
OSP-Core: Fixes User Search not returning values
OSP-Core: Removes manage.py Database Upgrade Script.  Manual DB Upgrades can now be performed via 'flask db <command>'
OSP-Config: ** Changes to Upgrade Process ** Git Pull has been removed from the osp-config.sh script.  Pulls are expected to be done by user manually now.


0.9.1
==============================================
OSP-Core: Fix Invalid Links for Topics
OSP-Core: Fixes bug when deleting OAuth Providers
OSP-Core: Fixes a bug in Admin -> Webhooks where edits are not immediately reflected on edit
OSP-Core: Fixes bug where manually calling a scheduled task would not work
OSP-Core: Removed a call which was causing DB Session Rollback issue in Celery

0.9.0
==============================================
** BREAKING CHANGE **: OSP-Core SMTP Settings have been removed from the DB and added to the config.py.  Check /opt/osp/conf/config.py.dist for SMTP Variables
** Important Note **: Custom Themes Developed for versions 0.8.x and lower will most likely be broken. Recommended to review any changes under the new Defaultv3 and adjust before upgrade
OSP General: The OSP Wiki has been moved to https://open-streaming-platform.readthedocs.io/
OSP-Core: Adds Celery Task Queue and Celery Beat Task Scheduler
OSP-Core: Adds New Theme Default Theme - Defaultv3
OSP-Core: Adds Ability to Create Admin Level Custom Panels on Front Page
OSP-Core: Adds Ability to Create User Level Custom Panels on the Channel Live Page
OSP-Core: Adds Channel Level and Video Level "Tags"
OSP-Core: Offloads Recording Completion, Video Delete, Clip Delete, Clip Creation, Video Upload, Webhook Functions to Task Queue for Responsiveness